# LOQ

./: .gitignore  README.md  User_comparing.ipynb  config.py  index.html  profile.html  pyproject.toml  run.py  visited.html
Collecting of latest events/: Collecting_info.py  Collecting_info_from_yandex_afisha.py
Geocoding/: Geocoding.py
app/: app.py  extensions.py
app/blueprints/auth/: __init__.py  blueprint.py  forms.py
app/blueprints/main_page/: __init__.py  blueprint.py  views.py
app/blueprints/meets/: __init__.py  blueprint.py  views.py
app/models/: users.py
app/static/css/: config.css  meets.css  profile.css  visited.css
app/templates/in_progress/: meets.html  profile.html  settings.html  visited.html
app/templates/main_page/: index.html  second.html  signup.html
app/templates/security/: login_user.html
css/: config.css  profile.css
frontend-app/: package-lock.json  package.json  webpack.config.js
frontend-app/nodeapp/: app.js
frontend-app/nodeapp/templates/: index.html
frontend-app/src/: index.js
frontend-app/src/components/: App.js  MeetsPage.js  NavLinks.js  ProfilePage.js  VisitedPage.js
frontend-app/static/css/: config.css  profile.css
migrations/: env.py
migrations/versions/: 20210611_113003_c70fbd4950b8_user_model.py
mobile-app/: package-lock.json
